--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -24,13 +24,14 @@ block content
       h2 手机 #{user.phone}
     .section
       .cars
-        ul
-          each car,i in user.cars || []
-            li(data="#{JSON.stringify(car)}")
-              .index 车型#{i+1}
-              .detail
-                .type #{car.type}#{car.color}
-                .number #{car.number}
+        .selected-cars
+          ul
+            each car,i in user.cars || []
+              li(data="#{JSON.stringify(car)}")
+                .index 车型#{i+1}
+                .detail
+                  .type #{car.type}#{car.color}
+                  .number #{car.number}
         .add
           i.icon-add
           | 添加车辆
