--- a/public/pages/tpl/finishorder.jade
+++ b/public/pages/tpl/finishorder.jade
@@ -7,4 +7,4 @@ include ./mixins
     for i in [1,2,3,4,5,6,7,8,9,10]
       li(class="car-broke car-broke-#{i}") #{i}
   +upload
-  input.button(type="button",value="完成")
+  input.button.cancel(type="button",value="完成")
