--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -48,7 +48,7 @@ body
       height: 49px
       padding: 8px 0
       text-align: center
-      font-size: 13px
+      font-size: 12px
       color: grey
       float: left
       &.active
@@ -286,13 +286,16 @@ body
           float: left
           border-right: 1px solid #e4e4e5
         .detail
-          margin: 8px 0 4px 0
+          text-align: center
+          height: 48px
           padding-left: 20px
-          float: left
+          line-height: 48px
           .type,.number
             height: 18px
             line-height: 18px
             font-size: 14px
+            display: inline-block
+            margin-right: 10px
   .services
     .active
       color: #fff
