--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -24,29 +24,34 @@ block content
       h2 手机 #{user.phone}
     .section
       .cars
-        .selected-cars
-          ul
-            each car,i in user.cars || []
-              if car["default"]
-                li(data="#{JSON.stringify(car)}")
-                  .detail
-                    .type #{car.type}#{car.color}
-                    .number #{car.number}
+        table.selected-cars
+          tr
+            td.cars-cell
+              ul
+                each car,i in user.cars || []
+                  if car["default"]
+                    li(data="#{JSON.stringify(car)}")
+                      .detail
+                        .type #{car.type}#{car.color}
+                        .number #{car.number}
+            td
+              .arrow
+                .icon
         .add
           i.icon-add
           | 添加车辆
     .section
       h2 请选择您需要的服务
       ul.services
-        each service,i in services
-          li(data="#{JSON.stringify(service)}",class="#{i==0?'active':''}")
-            .detail
-              .title #{service.title}
-              .desc #{service.describe}
-            .promo
-              .text 优惠券
-              .count --
-            .price ￥#{service.price}
+        - var service = services[0];
+        li(data="#{JSON.stringify(service)}",class="#{i==0?'active':''}")
+          .detail
+            .title #{service.title}
+            .desc #{service.describe}
+          .promo
+            .text 优惠券
+            .count --
+          .price ￥#{service.price}
     .section.credit
       .mine 您的积分：#{user.credit || 0}
       .use 使用积分
