--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -365,6 +365,35 @@ body
           font-size: 12px
         .count
           height: 19px
+  // 优惠券
+  .section.promo
+    height: 35px
+    line-height: 35px
+    padding: 5px 15px
+    background-color: #ccc
+    .count
+      float: right
+      color: pink
+      .num
+        position: relative
+        width: 20px
+        height: 25px
+        top: 3px
+        display: inline-block
+        margin-right: 5px
+        background-color: #fff
+        background-color: #fff
+        .text
+          position: relative
+          top: -3px
+          left: 6px
+        select
+          position: absolute
+          top: 0
+          left: 0
+          width: 100%
+          height: 100%
+          opacity: 0
   // 积分
   .section.credit
     clearfix()
