积分使用及金额计算

--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -391,6 +391,7 @@ body
           top: -4px
           left: 0px
         select
+          border: 0
           position: absolute
           top: 0
           left: 0
