--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -52,14 +52,11 @@ block content
           .price ￥#{service.price}
     if user.promo
       .section.promo(style="display:none")
-        | 请使用服务优惠券
+        | 使用服务优惠券
         .count
           span.num
             .text 1
             select
-              option 1
-              option 2
-              option 3
           | 张
     .section.credit
       | 我的积分：
