--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -13,11 +13,16 @@ li
   list-style: none
 
 body
+  width: 100%
   color: #fff
   background-color: orange
   &.openmenu
     position: fixed
     width: 100%
+
+.button,.input
+  border-radius: 0
+  -webkit-appearance: none
 
 .swipe-container .swipe-inner
   background-color: rgb(248,162,61)
@@ -75,7 +80,7 @@ body
   background-color: #f29200
 
 #login-form
-  padding-top: 150px
+  padding-top: 200px
   .row
     position: relative
     margin-bottom: 10px
