未添加车辆用户容错

--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -37,7 +37,7 @@ block content
             td
               .arrow
                 .icon
-        if user.cars.length < 5
+        if !user.cars || user.cars.length < 5
           .add
             i.icon-add
             | 添加车辆
