--- a/public/pages/tpl/finishorder.jade
+++ b/public/pages/tpl/finishorder.jade
@@ -1,10 +1,14 @@
 include ./mixins
 #finishorder.container
   h2.h2 洗车已完成
+  ul.photo-list.finish_photos
   +upload
   h2.h2 车损部位
-  ul.car-brokes
+  ul.breakages
     for i in [1,2,3,4,5,6,7,8,9,10]
-      li(class="car-broke car-broke-#{i}") #{i}
+      li(class="breakage breakage-#{i}",data-index="#{i}")
+        img(src="/img/breakages/icon-#{i}.svg",width="100%")
+  ul.photo-list.breakage_photos
   +upload
-  input.button.cancel(type="button",value="完成")
+  input.button.submit(type="button",value="完成")
+  input.button.cancel(type="button",value="取消")
