--- a/public/jade/order.jade
+++ b/public/jade/order.jade
@@ -7,7 +7,7 @@ block content
     .inner
       .row
         .label 手机：
-        .text #{order.phone}
+        .text #{order.user.phone}
       for car in order.cars
         .row
           .label 车型：
