添加车型库

--- a/public/pages/tpl/addcar.jade
+++ b/public/pages/tpl/addcar.jade
@@ -4,7 +4,7 @@ include ./mixins
   ul.upload-list
   +upload
   .row.type
-    input.input(placeholder="车型",data-pattern="/api/v1/cartypes?q={q}")
+    input.input(placeholder="车型",data-pattern="/api/v1/cartypes/{q}")
     i.icon
   .row.number
     input.input.number(placeholder="号牌")
