--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -482,11 +482,16 @@ body
     height: 25px
     line-height: 25px
     padding-left: 30px
+    overflow: hidden
   .packup
     border-bottom: 0
     height: 26px
     line-height: 26px
     color: #f8a23d
+  .small
+    margin-left: 10px
+    color: #ccc
+    font-size: 12px
 
 #addcar
   .h2
