预定单样式，及一小时内不显示小时部分

--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -557,8 +557,9 @@ body
   .estimate
     .time
       text-align: center
-      font-size: 32px
+      font-size: 28px
       line-height: 1.5
+      margin-bottom: 10px
     .text
       font-size: 10px
       text-align: center
