--- a/public/css/app.css
+++ b/public/css/app.css
@@ -728,8 +728,9 @@ body.openmenu {
 }
 #preorder .estimate .time {
   text-align: center;
-  font-size: 32px;
+  font-size: 28px;
   line-height: 1.5;
+  margin-bottom: 10px;
 }
 #preorder .estimate .text {
   font-size: 10px;
