--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -1,4 +1,5 @@
 orange=#fab44a
+deeporange=#f39600
 grey=#b6b6b6
 light-grey=#ddd
 pink=#c70462
@@ -15,14 +16,14 @@ li
 body
   width: 100%
   color: #fff
-  background-color: orange
+  background-color: deeporange
   &.openmenu
     position: fixed
     width: 100%
 
 .blank
   position: fixed
-  background-color: orange
+  background-color: deeporange
   z-index: 10
   height: 100%
   width: 100%
@@ -35,7 +36,7 @@ body
 .swipe-container
   z-index: 20
   .swipe-inner
-    background-color: rgb(248,162,61)
+    background-color: deeporange
 
 .popselect
   position: fixed
@@ -87,7 +88,7 @@ body
   width: 100px
 
 #login
-  background-color: #f29200
+  background-color: deeporange
 
 #login-form
   padding-top: 200px
