--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -33,6 +33,34 @@ body
   border-radius: 0
   -webkit-appearance: none
 
+.input
+  font-size: 14px
+  border: 1px solid light-grey
+  border-left: 2px solid orange
+  text-align: right
+  padding-right: 18px
+  box-sizing: border-box
+  height: 40px
+
+.button
+  width: 130px
+  height: 45px
+  border: 1px solid #fff
+  margin: 0 auto
+  margin-bottom: 15px
+  background-color: rgb(250,180,74)
+  border: 1px solid #fff
+  color: #fff
+  display: block
+  font-size: 18px
+  line-height: 1
+  text-align: center
+.button[disabled]
+  background-color: #bbb
+.button:active
+  background-color: pink
+
+
 .swipe-container
   z-index: 20
   .swipe-inner
@@ -253,31 +281,6 @@ body
 .container
   width: 260px
   margin: 0 auto
-
-.input
-  font-size: 14px
-  border: 1px solid light-grey
-  border-left: 2px solid orange
-  text-align: right
-  padding-right: 18px
-  box-sizing: border-box
-  height: 40px
-
-.button
-  width: 130px
-  height: 45px
-  border: 1px solid #fff
-  margin: 0 auto
-  margin-bottom: 15px
-  background-color: rgb(250,180,74)
-  border: 1px solid #fff
-  color: #fff
-  display: block
-  font-size: 18px
-  line-height: 45px
-  text-align: center
-.button[disabled]
-  background-color: #bbb
 
 #home
   position: fixed
