--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -18,7 +18,7 @@ block content
         a(href="/recharge") 充值
       li.item
         a(href="/help") 帮助
-    a.button(href="/logout") 退出登录
+    button.button(href="/logout") 退出登录
 
   .overlay
 
@@ -87,7 +87,7 @@ block content
       .note 注：一地址一订单，其他地址请另行下单
 
     .section
-      #go-wash.button 欧耶洗车啦
+      input#go-wash.button(type="button",value="欧耶洗车啦")
   script.
     var services = !{JSON.stringify(services)};
     facade({
