--- a/public/jade/order-result.jade
+++ b/public/jade/order-result.jade
@@ -1,8 +1,5 @@
 extends layout
 block content
-  for car in order.cars
-    .pic
-      img(src="#{config.qiniu_host}#{car.pic}?imageView/2/w/640")
   .order
     .inner
       .row
@@ -15,10 +12,10 @@ block content
             p #{car.type}
             p #{car.number}
       .row
-        .label 地址：
-        .text #{order.address}
-      .row
         .label 服务：
+        .text #{order.service.title}
+      .row
+        .label 支付：
         .text #{order.service.title}
   if order.status == "done"
     .remain 已完成
@@ -29,9 +26,9 @@ block content
       .message 请在预估时间内完成洗车
 
   if order.status == "todo"
-    .button.arrive 到达
+    button.button.arrive 到达
   else if order.status == "doing"
-    .button.done 完成
+    button.button.done 完成
 
   script.
     var order = !{JSON.stringify(order)}
