use linear-gradient as background

--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -16,7 +16,7 @@ li
 body
   width: 100%
   color: #fff
-  background-color: deeporange
+  background-image: linear-gradient(orange,deeporange)
   &.openmenu
     position: fixed
     width: 100%
