--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,7 +21,11 @@ li {
 body {
   width: 100%;
   color: #fff;
-  background-color: #f39600;
+  background-image: -webkit-linear-gradient(#fab44a, #f39600);
+  background-image: -moz-linear-gradient(#fab44a, #f39600);
+  background-image: -o-linear-gradient(#fab44a, #f39600);
+  background-image: -ms-linear-gradient(#fab44a, #f39600);
+  background-image: linear-gradient(#fab44a, #f39600);
 }
 body.openmenu {
   position: fixed;
