--- a/public/jade/index.jade
+++ b/public/jade/index.jade
@@ -87,7 +87,7 @@ block content
       .note 注：一地址一订单，其他地址请另行下单
 
     .section
-      input#go-wash.button(type="button",value="欧耶洗车啦")
+      #go-wash.button 欧耶洗车啦
   script.
     var services = !{JSON.stringify(services)};
     facade({
