--- a/public/css/app.css
+++ b/public/css/app.css
@@ -19,6 +19,7 @@ li {
   list-style: none;
 }
 body {
+  min-height: 400px;
   width: 100%;
   color: #fff;
   background-image: -webkit-linear-gradient(#fab44a, #f39600);
