--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -14,6 +14,7 @@ li
   list-style: none
 
 body
+  min-height: 400px
   width: 100%
   color: #fff
   background-image: linear-gradient(orange,deeporange)
