车辆添加层点返回按钮应该返回到订单页 fixes #27

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,7 @@ body {
   min-height: 400px;
   width: 100%;
   color: #fff;
+  background-color: #fab44a;
   background-image: -webkit-linear-gradient(#fab44a, #f39600);
   background-image: -moz-linear-gradient(#fab44a, #f39600);
   background-image: -o-linear-gradient(#fab44a, #f39600);
