--- a/public/stylus/app.styl
+++ b/public/stylus/app.styl
@@ -17,6 +17,7 @@ body
   min-height: 400px
   width: 100%
   color: #fff
+  background-color: orange
   background-image: linear-gradient(orange,deeporange)
   background-repeat: no-repeat
   &.openmenu
