--- a/public/jade/breakages.jade
+++ b/public/jade/breakages.jade
@@ -1,4 +1,4 @@
-- var breakage = locals.order && locals.order.breakage || -1;
+- var breakage = order && order.breakage || -1;
 ul.breakages
   for i in [1,2,3,4,5,6,7,8,9,10]
     li(class=["breakage","breakage-#{i}", i == breakage ? "active" : ""],data-index="#{i}")
